--- a/config/database.yml.template
+++ b/config/database.yml.template
@@ -4,8 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  database: YOURDEVDBNAME
+  username: YOURDEVDBUSER
+  password: YOURDEVDBPWD
   pool: 5
   timeout: 5000
 
@@ -13,13 +17,21 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  database: YOURTESTDBNAME
+  username: YOURTESTDBUSER
+  password: YOURTESTDBPWD
   pool: 5
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  database: YOURPRODDBNAME
+  username: YOURPRODDBUSER
+  password: YOURPRODDBPWD
   pool: 5
   timeout: 5000
