--- a/config/database.yml.template
+++ b/config/database.yml.template
@@ -1,37 +1,20 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
+default: &default
   adapter: postgresql
   encoding: unicode
   host: localhost
-  database: YOURDEVDBNAME
-  username: YOURDEVDBUSER
-  password: YOURDEVDBPWD
+  username: YOURDBUSER
+  password: YOURDBPWD
   pool: 5
   timeout: 5000
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  host: localhost
-  database: YOURTESTDBNAME
-  username: YOURTESTDBUSER
-  password: YOURTESTDBPWD
-  pool: 5
-  timeout: 5000
+development:
+  database: YOURDEVDBNAME
+  <<: *default
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  host: localhost
   database: YOURPRODDBNAME
-  username: YOURPRODDBUSER
-  password: YOURPRODDBPWD
-  pool: 5
-  timeout: 5000
+  <<: *default
+
+test:
+  database: YOURTESTDBNAME
+  <<: *default
