--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: ruby
+bundler_args: --without development
 rvm:
   - "2.1.1"
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+  - JS=true
+  - CONTINUOUS_INTEGRATION=true
+before_script:
+  - "cp config/database.yml.travis config/database.yml"
 notifications:
   email:
     recipients:
