Added step to copy browse_everything_providers.yml.template to .yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
   - CONTINUOUS_INTEGRATION=true
 before_script:
   - "cp config/database.yml.travis config/database.yml"
+  - "cp config/browse_everything_providers.yml.template config/browse_everything_providers.yml"
   - "cp config/initializers/secret_token.rb.template config/initializers/secret_token.rb"
   - "bundle exec rake gw-sufia:generate_secret"
 notifications:
