--- a/config/analytics.yml.template
+++ b/config/analytics.yml.template
@@ -2,6 +2,7 @@
 # To integrate your app with Google Analytics, uncomment the lines below and add your API key information.
 #
 # analytics:
+#   id: GOOGLE_ANALYTICS_ID
 #   app_name: GOOGLE_OAUTH_APP_NAME
 #   app_version: GOOGLE_OAUTH_APP_VERSION
 #   privkey_path: GOOGLE_OAUTH_PRIVATE_KEY_PATH
