--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -1,8 +1,9 @@
 menubar: false
 toolbar1: styleselect | bold italic | link image | undo redo
-toolbar2: table | fullscreen | uploadimage
+toolbar2: table | fullscreen | uploadimage | code
 plugins:
   - table
   - fullscreen
   - uploadimage
   - link
+  - code
